--- a/default.css
+++ b/default.css
@@ -25,15 +25,69 @@ table, tr, th, td {
 	cursor: pointer;
 }
 
-#newSpreadsheetContainer {
+.modal {
 	position: fixed;
+	z-index: 1;
+	overflow: auto;
+	padding-top: 100px;
 	width: 100%;
 	height: 100%;
 	left: 0;
 	top: 0;
-	display: flex;
 	flex-direction: column;
 	background-color: #777777fa;
-	align-items: center;
-	justify-content: center;
+}
+
+.modal .panel {
+	margin: auto;
+}
+
+.titleBar {
+	display: flex;
+	flex-direction: row;
+}
+
+.titleBar > .label {
+	flex-grow: 1;
+	font-size: 120%;
+}
+
+.close {
+	color: #aaaaaa;
+	font-size: 28px;
+	font-weight: bold;
+	margin-top: -5px;
+}
+
+.close:hover,
+.close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.panel {
+	background-color: antiquewhite;
+	padding: 10px;
+	border-radius: 8px;
+	border: thin solid black;
+	box-shadow: 5px 5px 15px #0008;
+	max-width: 250px;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+}
+
+form > label {
+	margin-top: 10px;
+}
+
+.controls {
+	display: flex;
+}
+
+.controls > * {
+	margin: 5px;
 }
