--- a/default.css
+++ b/default.css
@@ -29,7 +29,6 @@ table, tr, th, td {
 	position: fixed;
 	z-index: 1;
 	overflow: auto;
-	padding-top: 100px;
 	width: 100%;
 	height: 100%;
 	left: 0;
@@ -39,7 +38,7 @@ table, tr, th, td {
 }
 
 .modal .panel {
-	margin: auto;
+	margin: 100px auto;
 }
 
 .titleBar {
