--- a/default.css
+++ b/default.css
@@ -1,4 +1,46 @@
+body {
+	background-color: #fcfbf6;
+}
+
+button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 7px 12px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius:  4px;
+	box-shadow: 2px 2px 5px #0007;
+}
+
+body, button, input, select, textarea {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 19px;
+	font-weight: 300;
+}
+
+h1, h2, h3, h4 {
+	font-weight: 400;
+	margin-block-start: 0.3em;
+	margin-block-end: 0.3em;
+}
+
+
+#authorize_button, #signout_button {
+}
+
 #auth {
+	display: flex;
+	align-items: flex-start;
+	flex-direction: row;
+}
+
+.appTitle {
+	flex-grow: 1;
 }
 
 #content {
