--- a/default.css
+++ b/default.css
@@ -36,7 +36,7 @@ body, button, input, select, textarea, th {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 19px;
 	font-weight: 300;
-	color: #241e12;
+	color: #3b2a1c;
 }
 
 
@@ -108,6 +108,10 @@ h1, h2, h3, h4, th {
 	position: relative;
 	padding:  10px;
 	margin-bottom: 50px;
+}
+
+#timesheetsList {
+	min-height: 100px;
 }
 
 li {
@@ -261,4 +265,19 @@ form > label {
 		left: 110%;
 		width: 10%;
 	}
+}
+
+.documentInfoBar {
+	display: flex;
+	align-items: center;
+}
+
+.documentInfoBar h2 {
+	display: inline-block;
+}
+
+.documentInfoBar img {
+	margin-left: 10px;
+	margin-top: 5px;
+	height: 24px;
 }
